--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
+<!DOCTYPE html>
+
+<html>
 <head>
 <title>Babushka Bot<title>
 </head>
+  
 <body>
-<iframe width="100vw" height="100vh" src="https://console.dialogflow.com/api-client/demo/embedded/babushka"></iframe>
+  <iframe width="100%" height="100%" src="https://console.dialogflow.com/api-client/demo/embedded/babushka"></iframe>
 </body>
+</html>
