--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 
 <html>
 <head>
-<title>Babushka Bot</title>
+  <title>Babushka Bot</title>
 </head>
   
 <body>
-  <iframe width="100%" height="100%" src="https://console.dialogflow.com/api-client/demo/embedded/babushka"></iframe>
+  <iframe style="display: block; height: 95vh; width: 95vw;" src="https://console.dialogflow.com/api-client/demo/embedded/babushka"></iframe>
 </body>
 </html>
